--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "lilpacy <revivedtomorrow@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "viem": "^1.5.0",
     "ethers": "5"
   },
   "scripts": {
